src/lib/LibNotcurses_ffi.jl


"""
    ncplane_perimeter(n, ul, ur, ll, lr, hline, vline, ctlword)


### Prototype
```c
static inline int ncplane_perimeter(struct ncplane* n, const nccell* ul, const nccell* ur, const nccell* ll, const nccell* lr, const nccell* hline, const nccell* vline, unsigned ctlword);
```
"""
function ncplane_perimeter(n, ul, ur, ll, lr, hline, vline, ctlword)
    @ccall libnotcurses_ffi.ncplane_perimeter(n::Ptr{ncplane}, ul::Ptr{nccell}, ur::Ptr{nccell}, ll::Ptr{nccell}, lr::Ptr{nccell}, hline::Ptr{nccell}, vline::Ptr{nccell}, ctlword::Cuint)::Cint
end

"""
    nccell_fg_rgb(cl)

Extract 24 bits of foreground RGB from 'cl', shifted to LSBs.
### Prototype
```c
static inline uint32_t nccell_fg_rgb(const nccell* cl);
```
"""
function nccell_fg_rgb(cl)
    @ccall libnotcurses_ffi.nccell_fg_rgb(cl::Ptr{nccell})::UInt32
end

"""
    nccell_bg_rgb(cl)

Extract 24 bits of background RGB from 'cl', shifted to LSBs.
### Prototype
```c
static inline uint32_t nccell_bg_rgb(const nccell* cl);
```
"""
function nccell_bg_rgb(cl)
    @ccall libnotcurses_ffi.nccell_bg_rgb(cl::Ptr{nccell})::UInt32
end

"""
    nccell_fg_alpha(cl)

Extract 2 bits of foreground alpha from 'cl', shifted to LSBs.
### Prototype
```c
static inline uint32_t nccell_fg_alpha(const nccell* cl);
```
"""
function nccell_fg_alpha(cl)
    @ccall libnotcurses_ffi.nccell_fg_alpha(cl::Ptr{nccell})::UInt32
end

"""
    nccell_bg_alpha(cl)

Extract 2 bits of background alpha from 'cl', shifted to LSBs.
### Prototype
```c
static inline uint32_t nccell_bg_alpha(const nccell* cl);
```
"""
function nccell_bg_alpha(cl)
    @ccall libnotcurses_ffi.nccell_bg_alpha(cl::Ptr{nccell})::UInt32
end

"""
    nccell_fg_rgb8(cl, r, g, b)

Extract 24 bits of foreground RGB from 'cl', split into components.
### Prototype
```c
static inline uint32_t nccell_fg_rgb8(const nccell* cl, unsigned* r, unsigned* g, unsigned* b);
```
"""
function nccell_fg_rgb8(cl, r, g, b)
    @ccall libnotcurses_ffi.nccell_fg_rgb8(cl::Ptr{nccell}, r::Ptr{Cuint}, g::Ptr{Cuint}, b::Ptr{Cuint})::UInt32
end

"""
    nccell_bg_rgb8(cl, r, g, b)

Extract 24 bits of background RGB from 'cl', split into components.
### Prototype
```c
static inline uint32_t nccell_bg_rgb8(const nccell* cl, unsigned* r, unsigned* g, unsigned* b);
```
"""
function nccell_bg_rgb8(cl, r, g, b)
    @ccall libnotcurses_ffi.nccell_bg_rgb8(cl::Ptr{nccell}, r::Ptr{Cuint}, g::Ptr{Cuint}, b::Ptr{Cuint})::UInt32
end

"""
    nccell_set_fg_rgb8(cl, r, g, b)

Set the r, g, and b cell for the foreground component of this 64-bit
'cl' variable, and mark it as not using the default color.
### Prototype
```c
static inline int nccell_set_fg_rgb8(nccell* cl, unsigned r, unsigned g, unsigned b);
```
"""
function nccell_set_fg_rgb8(cl, r, g, b)
    @ccall libnotcurses_ffi.nccell_set_fg_rgb8(cl::Ptr{nccell}, r::Cuint, g::Cuint, b::Cuint)::Cint
end

"""
    nccell_set_fg_rgb8_clipped(cl, r, g, b)

Same, but clipped to [0..255].
### Prototype
```c
static inline void nccell_set_fg_rgb8_clipped(nccell* cl, int r, int g, int b);
```
"""
function nccell_set_fg_rgb8_clipped(cl, r, g, b)
    @ccall libnotcurses_ffi.nccell_set_fg_rgb8_clipped(cl::Ptr{nccell}, r::Cint, g::Cint, b::Cint)::Cvoid
end

"""
    nccell_set_fg_rgb(c, channel)

Same, but with an assembled 24-bit RGB value.
### Prototype
```c
static inline int nccell_set_fg_rgb(nccell* c, uint32_t channel);
```
"""
function nccell_set_fg_rgb(c, channel)
    @ccall libnotcurses_ffi.nccell_set_fg_rgb(c::Ptr{nccell}, channel::UInt32)::Cint
end

"""
    nccell_set_fg_palindex(cl, idx)

Set the cell's foreground palette index, set the foreground palette index
bit, set it foreground-opaque, and clear the foreground default color bit.
### Prototype
```c
static inline int nccell_set_fg_palindex(nccell* cl, unsigned idx);
```
"""
function nccell_set_fg_palindex(cl, idx)
    @ccall libnotcurses_ffi.nccell_set_fg_palindex(cl::Ptr{nccell}, idx::Cuint)::Cint
end

"""
    nccell_fg_palindex(cl)


### Prototype
```c
static inline uint32_t nccell_fg_palindex(const nccell* cl);
```
"""
function nccell_fg_palindex(cl)
    @ccall libnotcurses_ffi.nccell_fg_palindex(cl::Ptr{nccell})::UInt32
end

"""
    nccell_set_bg_rgb8(cl, r, g, b)

Set the r, g, and b cell for the background component of this 64-bit
'cl' variable, and mark it as not using the default color.
### Prototype
```c
static inline int nccell_set_bg_rgb8(nccell* cl, unsigned r, unsigned g, unsigned b);
```
"""
function nccell_set_bg_rgb8(cl, r, g, b)
    @ccall libnotcurses_ffi.nccell_set_bg_rgb8(cl::Ptr{nccell}, r::Cuint, g::Cuint, b::Cuint)::Cint
end

"""
    nccell_set_bg_rgb8_clipped(cl, r, g, b)

Same, but clipped to [0..255].
### Prototype
```c
static inline void nccell_set_bg_rgb8_clipped(nccell* cl, int r, int g, int b);
```
"""
function nccell_set_bg_rgb8_clipped(cl, r, g, b)
    @ccall libnotcurses_ffi.nccell_set_bg_rgb8_clipped(cl::Ptr{nccell}, r::Cint, g::Cint, b::Cint)::Cvoid
end

"""
    nccell_set_bg_rgb(c, channel)

Same, but with an assembled 24-bit RGB value. A value over 0xffffff
will be rejected, with a non-zero return value.
### Prototype
```c
static inline int nccell_set_bg_rgb(nccell* c, uint32_t channel);
```
"""
function nccell_set_bg_rgb(c, channel)
    @ccall libnotcurses_ffi.nccell_set_bg_rgb(c::Ptr{nccell}, channel::UInt32)::Cint
end

"""
    nccell_set_bg_palindex(cl, idx)

Set the cell's background palette index, set the background palette index
bit, set it background-opaque, and clear the background default color bit.
### Prototype
```c
static inline int nccell_set_bg_palindex(nccell* cl, unsigned idx);
```
"""
function nccell_set_bg_palindex(cl, idx)
    @ccall libnotcurses_ffi.nccell_set_bg_palindex(cl::Ptr{nccell}, idx::Cuint)::Cint
end

"""
    nccell_bg_palindex(cl)


### Prototype
```c
static inline uint32_t nccell_bg_palindex(const nccell* cl);
```
"""
function nccell_bg_palindex(cl)
    @ccall libnotcurses_ffi.nccell_bg_palindex(cl::Ptr{nccell})::UInt32
end

"""
    nccell_fg_default_p(cl)

Is the foreground using the "default foreground color"?
### Prototype
```c
static inline bool nccell_fg_default_p(const nccell* cl);
```
"""
function nccell_fg_default_p(cl)
    @ccall libnotcurses_ffi.nccell_fg_default_p(cl::Ptr{nccell})::Bool
end

"""
    nccell_fg_palindex_p(cl)


### Prototype
```c
static inline bool nccell_fg_palindex_p(const nccell* cl);
```
"""
function nccell_fg_palindex_p(cl)
    @ccall libnotcurses_ffi.nccell_fg_palindex_p(cl::Ptr{nccell})::Bool
end

"""
    nccell_bg_default_p(cl)

Is the background using the "default background color"? The "default
background color" must generally be used to take advantage of
terminal-effected transparency.
### Prototype
```c
static inline bool nccell_bg_default_p(const nccell* cl);
```
"""
function nccell_bg_default_p(cl)
    @ccall libnotcurses_ffi.nccell_bg_default_p(cl::Ptr{nccell})::Bool
end

"""
    nccell_bg_palindex_p(cl)


### Prototype
```c
static inline bool nccell_bg_palindex_p(const nccell* cl);
```
"""
function nccell_bg_palindex_p(cl)
    @ccall libnotcurses_ffi.nccell_bg_palindex_p(cl::Ptr{nccell})::Bool
end

"""
    ncplane_bchannel(n)

Extract the background alpha and coloring bits from a 64-bit channel
pair as a single 32-bit value.
### Prototype
```c
static inline uint32_t ncplane_bchannel(const struct ncplane* n);
```
"""
function ncplane_bchannel(n)
    @ccall libnotcurses_ffi.ncplane_bchannel(n::Ptr{ncplane})::UInt32
end

"""
    ncplane_fchannel(n)

Extract the foreground alpha and coloring bits from a 64-bit channel
pair as a single 32-bit value.
### Prototype
```c
static inline uint32_t ncplane_fchannel(const struct ncplane* n);
```
"""
function ncplane_fchannel(n)
    @ccall libnotcurses_ffi.ncplane_fchannel(n::Ptr{ncplane})::UInt32
end

"""
    ncplane_fg_rgb(n)

Extract 24 bits of working foreground RGB from an ncplane, shifted to LSBs.
### Prototype
```c
static inline uint32_t ncplane_fg_rgb(const struct ncplane* n);
```
"""
function ncplane_fg_rgb(n)
    @ccall libnotcurses_ffi.ncplane_fg_rgb(n::Ptr{ncplane})::UInt32
end

"""
    ncplane_bg_rgb(n)

Extract 24 bits of working background RGB from an ncplane, shifted to LSBs.
### Prototype
```c
static inline uint32_t ncplane_bg_rgb(const struct ncplane* n);
```
"""
function ncplane_bg_rgb(n)
    @ccall libnotcurses_ffi.ncplane_bg_rgb(n::Ptr{ncplane})::UInt32
end

"""
    ncplane_fg_alpha(n)

Extract 2 bits of foreground alpha from 'struct ncplane', shifted to LSBs.
### Prototype
```c
static inline uint32_t ncplane_fg_alpha(const struct ncplane* n);
```
"""
function ncplane_fg_alpha(n)
    @ccall libnotcurses_ffi.ncplane_fg_alpha(n::Ptr{ncplane})::UInt32
end

"""
    ncplane_fg_default_p(n)

Is the plane's foreground using the "default foreground color"?
### Prototype
```c
static inline bool ncplane_fg_default_p(const struct ncplane* n);
```
"""
function ncplane_fg_default_p(n)
    @ccall libnotcurses_ffi.ncplane_fg_default_p(n::Ptr{ncplane})::Bool
end

"""
    ncplane_bg_alpha(n)

Extract 2 bits of background alpha from 'struct ncplane', shifted to LSBs.
### Prototype
```c
static inline uint32_t ncplane_bg_alpha(const struct ncplane* n);
```
"""
function ncplane_bg_alpha(n)
    @ccall libnotcurses_ffi.ncplane_bg_alpha(n::Ptr{ncplane})::UInt32
end

"""
    ncplane_bg_default_p(n)

Is the plane's background using the "default background color"?
### Prototype
```c
static inline bool ncplane_bg_default_p(const struct ncplane* n);
```
"""
function ncplane_bg_default_p(n)
    @ccall libnotcurses_ffi.ncplane_bg_default_p(n::Ptr{ncplane})::Bool
end

"""
    ncplane_fg_rgb8(n, r, g, b)

Extract 24 bits of foreground RGB from 'n', split into components.
### Prototype
```c
static inline uint32_t ncplane_fg_rgb8(const struct ncplane* n, unsigned* r, unsigned* g, unsigned* b);
```
"""
function ncplane_fg_rgb8(n, r, g, b)
    @ccall libnotcurses_ffi.ncplane_fg_rgb8(n::Ptr{ncplane}, r::Ptr{Cuint}, g::Ptr{Cuint}, b::Ptr{Cuint})::UInt32
end

"""
    ncplane_bg_rgb8(n, r, g, b)

Extract 24 bits of background RGB from 'n', split into components.
### Prototype
```c
static inline uint32_t ncplane_bg_rgb8(const struct ncplane* n, unsigned* r, unsigned* g, unsigned* b);
```
"""
function ncplane_bg_rgb8(n, r, g, b)
    @ccall libnotcurses_ffi.ncplane_bg_rgb8(n::Ptr{ncplane}, r::Ptr{Cuint}, g::Ptr{Cuint}, b::Ptr{Cuint})::UInt32
end

"""
    nccells_load_box(n, styles, channels, ul, ur, ll, lr, hl, vl, gclusters)

load up six cells with the EGCs necessary to draw a box. returns 0 on
success, -1 on error. on error, any cells this function might
have loaded before the error are nccell_release()d. There must be at least
six EGCs in gcluster.
### Prototype
```c
static inline int nccells_load_box(struct ncplane* n, uint16_t styles, uint64_t channels, nccell* ul, nccell* ur, nccell* ll, nccell* lr, nccell* hl, nccell* vl, const char* gclusters);
```
"""
function nccells_load_box(n, styles, channels, ul, ur, ll, lr, hl, vl, gclusters)
    @ccall libnotcurses_ffi.nccells_load_box(n::Ptr{ncplane}, styles::UInt16, channels::UInt64, ul::Ptr{nccell}, ur::Ptr{nccell}, ll::Ptr{nccell}, lr::Ptr{nccell}, hl::Ptr{nccell}, vl::Ptr{nccell}, gclusters::Ptr{Cchar})::Cint
end

"""
    nccells_ascii_box(n, attr, channels, ul, ur, ll, lr, hl, vl)


### Prototype
```c
static inline int nccells_ascii_box(struct ncplane* n, uint16_t attr, uint64_t channels, nccell* ul, nccell* ur, nccell* ll, nccell* lr, nccell* hl, nccell* vl);
```
"""
function nccells_ascii_box(n, attr, channels, ul, ur, ll, lr, hl, vl)
    @ccall libnotcurses_ffi.nccells_ascii_box(n::Ptr{ncplane}, attr::UInt16, channels::UInt64, ul::Ptr{nccell}, ur::Ptr{nccell}, ll::Ptr{nccell}, lr::Ptr{nccell}, hl::Ptr{nccell}, vl::Ptr{nccell})::Cint
end

"""
    nccells_double_box(n, attr, channels, ul, ur, ll, lr, hl, vl)

